syntax = "proto3";

option csharp_namespace = "NewBankServer.Protos";
import "Protos/userCRUD.proto";
import "Protos/accountCRUD.proto";
import "Protos/common.proto";

package protos.creation;

service Creation{
  rpc SignUp (SignUpRequest) returns (SignUpResponse);
  rpc CreatePasswordSalt (common.Empty) returns (CreateSaltResponse);
}

message SignUpRequest{
  userCRUD.User user = 1;
  accountCRUD.Account account = 2;
}

message SignUpResponse{

}

message CreateSaltResponse{
  string serverSalt = 1;
}